--- a/udemy/a_z/bolsa_valores/recorrente_multiplas_saidas.ipynb
+++ b/udemy/a_z/bolsa_valores/recorrente_multiplas_saidas.ipynb
@@ -2,30 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-09-02 20:46:03.496530: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-09-02 20:46:03.528690: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-09-02 20:46:03.529503: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-09-02 20:46:04.425893: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from keras.utils import plot_model\n",
+    "\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, LSTM\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -112,226 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n",
-      "36/36 [==============================] - 8s 118ms/step - loss: 0.0390 - mean_absolute_error: 0.1494\n",
-      "Epoch 2/100\n",
-      "36/36 [==============================] - 4s 121ms/step - loss: 0.0191 - mean_absolute_error: 0.1075\n",
-      "Epoch 3/100\n",
-      "36/36 [==============================] - 4s 118ms/step - loss: 0.0143 - mean_absolute_error: 0.0930\n",
-      "Epoch 4/100\n",
-      "36/36 [==============================] - 4s 116ms/step - loss: 0.0126 - mean_absolute_error: 0.0870\n",
-      "Epoch 5/100\n",
-      "36/36 [==============================] - 4s 113ms/step - loss: 0.0115 - mean_absolute_error: 0.0814\n",
-      "Epoch 6/100\n",
-      "36/36 [==============================] - 4s 114ms/step - loss: 0.0112 - mean_absolute_error: 0.0823\n",
-      "Epoch 7/100\n",
-      "36/36 [==============================] - 4s 116ms/step - loss: 0.0101 - mean_absolute_error: 0.0760\n",
-      "Epoch 8/100\n",
-      "36/36 [==============================] - 4s 121ms/step - loss: 0.0100 - mean_absolute_error: 0.0770\n",
-      "Epoch 9/100\n",
-      "36/36 [==============================] - 4s 119ms/step - loss: 0.0082 - mean_absolute_error: 0.0696\n",
-      "Epoch 10/100\n",
-      "36/36 [==============================] - 4s 121ms/step - loss: 0.0079 - mean_absolute_error: 0.0683\n",
-      "Epoch 11/100\n",
-      "36/36 [==============================] - 4s 125ms/step - loss: 0.0084 - mean_absolute_error: 0.0692\n",
-      "Epoch 12/100\n",
-      "36/36 [==============================] - 4s 122ms/step - loss: 0.0073 - mean_absolute_error: 0.0640\n",
-      "Epoch 13/100\n",
-      "36/36 [==============================] - 4s 120ms/step - loss: 0.0069 - mean_absolute_error: 0.0638\n",
-      "Epoch 14/100\n",
-      "36/36 [==============================] - 4s 122ms/step - loss: 0.0063 - mean_absolute_error: 0.0610\n",
-      "Epoch 15/100\n",
-      "36/36 [==============================] - 4s 123ms/step - loss: 0.0062 - mean_absolute_error: 0.0598\n",
-      "Epoch 16/100\n",
-      "36/36 [==============================] - 4s 123ms/step - loss: 0.0065 - mean_absolute_error: 0.0610\n",
-      "Epoch 17/100\n",
-      "36/36 [==============================] - 4s 122ms/step - loss: 0.0056 - mean_absolute_error: 0.0564\n",
-      "Epoch 18/100\n",
-      "36/36 [==============================] - 4s 121ms/step - loss: 0.0058 - mean_absolute_error: 0.0578\n",
-      "Epoch 19/100\n",
-      "36/36 [==============================] - 5s 128ms/step - loss: 0.0056 - mean_absolute_error: 0.0567\n",
-      "Epoch 20/100\n",
-      "36/36 [==============================] - 4s 123ms/step - loss: 0.0060 - mean_absolute_error: 0.0582\n",
-      "Epoch 21/100\n",
-      "36/36 [==============================] - 5s 128ms/step - loss: 0.0054 - mean_absolute_error: 0.0551\n",
-      "Epoch 22/100\n",
-      "36/36 [==============================] - 5s 126ms/step - loss: 0.0043 - mean_absolute_error: 0.0506\n",
-      "Epoch 23/100\n",
-      "36/36 [==============================] - 5s 126ms/step - loss: 0.0047 - mean_absolute_error: 0.0526\n",
-      "Epoch 24/100\n",
-      "36/36 [==============================] - 5s 127ms/step - loss: 0.0045 - mean_absolute_error: 0.0500\n",
-      "Epoch 25/100\n",
-      "36/36 [==============================] - 5s 130ms/step - loss: 0.0047 - mean_absolute_error: 0.0521\n",
-      "Epoch 26/100\n",
-      "36/36 [==============================] - 4s 120ms/step - loss: 0.0046 - mean_absolute_error: 0.0510\n",
-      "Epoch 27/100\n",
-      "36/36 [==============================] - 4s 124ms/step - loss: 0.0042 - mean_absolute_error: 0.0488\n",
-      "Epoch 28/100\n",
-      "36/36 [==============================] - 4s 118ms/step - loss: 0.0043 - mean_absolute_error: 0.0492\n",
-      "Epoch 29/100\n",
-      "36/36 [==============================] - 4s 125ms/step - loss: 0.0039 - mean_absolute_error: 0.0474\n",
-      "Epoch 30/100\n",
-      "36/36 [==============================] - 4s 125ms/step - loss: 0.0039 - mean_absolute_error: 0.0474\n",
-      "Epoch 31/100\n",
-      "36/36 [==============================] - 5s 125ms/step - loss: 0.0036 - mean_absolute_error: 0.0461\n",
-      "Epoch 32/100\n",
-      "36/36 [==============================] - 5s 130ms/step - loss: 0.0037 - mean_absolute_error: 0.0465\n",
-      "Epoch 33/100\n",
-      "36/36 [==============================] - 4s 123ms/step - loss: 0.0036 - mean_absolute_error: 0.0448\n",
-      "Epoch 34/100\n",
-      "36/36 [==============================] - 4s 123ms/step - loss: 0.0034 - mean_absolute_error: 0.0444\n",
-      "Epoch 35/100\n",
-      "36/36 [==============================] - 4s 120ms/step - loss: 0.0036 - mean_absolute_error: 0.0457\n",
-      "Epoch 36/100\n",
-      "36/36 [==============================] - 4s 121ms/step - loss: 0.0035 - mean_absolute_error: 0.0436\n",
-      "Epoch 37/100\n",
-      "36/36 [==============================] - 4s 115ms/step - loss: 0.0036 - mean_absolute_error: 0.0460\n",
-      "Epoch 38/100\n",
-      "36/36 [==============================] - 4s 114ms/step - loss: 0.0032 - mean_absolute_error: 0.0434\n",
-      "Epoch 39/100\n",
-      "36/36 [==============================] - 4s 115ms/step - loss: 0.0035 - mean_absolute_error: 0.0445\n",
-      "Epoch 40/100\n",
-      "36/36 [==============================] - 4s 118ms/step - loss: 0.0034 - mean_absolute_error: 0.0446\n",
-      "Epoch 41/100\n",
-      "36/36 [==============================] - 4s 114ms/step - loss: 0.0034 - mean_absolute_error: 0.0440\n",
-      "Epoch 42/100\n",
-      "36/36 [==============================] - 4s 109ms/step - loss: 0.0031 - mean_absolute_error: 0.0419\n",
-      "Epoch 43/100\n",
-      "36/36 [==============================] - 4s 118ms/step - loss: 0.0029 - mean_absolute_error: 0.0415\n",
-      "Epoch 44/100\n",
-      "36/36 [==============================] - 4s 111ms/step - loss: 0.0030 - mean_absolute_error: 0.0415\n",
-      "Epoch 45/100\n",
-      "36/36 [==============================] - 4s 110ms/step - loss: 0.0030 - mean_absolute_error: 0.0417\n",
-      "Epoch 46/100\n",
-      "36/36 [==============================] - 4s 112ms/step - loss: 0.0031 - mean_absolute_error: 0.0423\n",
-      "Epoch 47/100\n",
-      "36/36 [==============================] - 4s 106ms/step - loss: 0.0029 - mean_absolute_error: 0.0398\n",
-      "Epoch 48/100\n",
-      "36/36 [==============================] - 4s 106ms/step - loss: 0.0028 - mean_absolute_error: 0.0399\n",
-      "Epoch 49/100\n",
-      "36/36 [==============================] - 4s 104ms/step - loss: 0.0028 - mean_absolute_error: 0.0401\n",
-      "Epoch 50/100\n",
-      "36/36 [==============================] - 4s 108ms/step - loss: 0.0031 - mean_absolute_error: 0.0420\n",
-      "Epoch 51/100\n",
-      "36/36 [==============================] - 4s 110ms/step - loss: 0.0028 - mean_absolute_error: 0.0402\n",
-      "Epoch 52/100\n",
-      "36/36 [==============================] - 4s 111ms/step - loss: 0.0027 - mean_absolute_error: 0.0393\n",
-      "Epoch 53/100\n",
-      "36/36 [==============================] - 4s 107ms/step - loss: 0.0027 - mean_absolute_error: 0.0392\n",
-      "Epoch 54/100\n",
-      "36/36 [==============================] - 4s 108ms/step - loss: 0.0025 - mean_absolute_error: 0.0385\n",
-      "Epoch 55/100\n",
-      "36/36 [==============================] - 4s 106ms/step - loss: 0.0026 - mean_absolute_error: 0.0382\n",
-      "Epoch 56/100\n",
-      "36/36 [==============================] - 4s 105ms/step - loss: 0.0025 - mean_absolute_error: 0.0385\n",
-      "Epoch 57/100\n",
-      "36/36 [==============================] - 4s 113ms/step - loss: 0.0023 - mean_absolute_error: 0.0366\n",
-      "Epoch 58/100\n",
-      "36/36 [==============================] - 5s 129ms/step - loss: 0.0025 - mean_absolute_error: 0.0383\n",
-      "Epoch 59/100\n",
-      "36/36 [==============================] - 4s 120ms/step - loss: 0.0026 - mean_absolute_error: 0.0386\n",
-      "Epoch 60/100\n",
-      "36/36 [==============================] - 4s 119ms/step - loss: 0.0023 - mean_absolute_error: 0.0372\n",
-      "Epoch 61/100\n",
-      "36/36 [==============================] - 4s 120ms/step - loss: 0.0025 - mean_absolute_error: 0.0381\n",
-      "Epoch 62/100\n",
-      "36/36 [==============================] - 4s 123ms/step - loss: 0.0025 - mean_absolute_error: 0.0372\n",
-      "Epoch 63/100\n",
-      "36/36 [==============================] - 4s 124ms/step - loss: 0.0026 - mean_absolute_error: 0.0383\n",
-      "Epoch 64/100\n",
-      "36/36 [==============================] - 4s 123ms/step - loss: 0.0023 - mean_absolute_error: 0.0370\n",
-      "Epoch 65/100\n",
-      "36/36 [==============================] - 5s 131ms/step - loss: 0.0024 - mean_absolute_error: 0.0368\n",
-      "Epoch 66/100\n",
-      "36/36 [==============================] - 4s 119ms/step - loss: 0.0024 - mean_absolute_error: 0.0373\n",
-      "Epoch 67/100\n",
-      "36/36 [==============================] - 4s 110ms/step - loss: 0.0023 - mean_absolute_error: 0.0363\n",
-      "Epoch 68/100\n",
-      "36/36 [==============================] - 4s 111ms/step - loss: 0.0025 - mean_absolute_error: 0.0379\n",
-      "Epoch 69/100\n",
-      "36/36 [==============================] - 4s 112ms/step - loss: 0.0022 - mean_absolute_error: 0.0362\n",
-      "Epoch 70/100\n",
-      "36/36 [==============================] - 4s 112ms/step - loss: 0.0021 - mean_absolute_error: 0.0351\n",
-      "Epoch 71/100\n",
-      "36/36 [==============================] - 4s 115ms/step - loss: 0.0023 - mean_absolute_error: 0.0363\n",
-      "Epoch 72/100\n",
-      "36/36 [==============================] - 4s 122ms/step - loss: 0.0024 - mean_absolute_error: 0.0373\n",
-      "Epoch 73/100\n",
-      "36/36 [==============================] - 4s 124ms/step - loss: 0.0020 - mean_absolute_error: 0.0343\n",
-      "Epoch 74/100\n",
-      "36/36 [==============================] - 4s 123ms/step - loss: 0.0024 - mean_absolute_error: 0.0366\n",
-      "Epoch 75/100\n",
-      "36/36 [==============================] - 4s 116ms/step - loss: 0.0022 - mean_absolute_error: 0.0354\n",
-      "Epoch 76/100\n",
-      "36/36 [==============================] - 4s 117ms/step - loss: 0.0023 - mean_absolute_error: 0.0365\n",
-      "Epoch 77/100\n",
-      "36/36 [==============================] - 4s 116ms/step - loss: 0.0021 - mean_absolute_error: 0.0350\n",
-      "Epoch 78/100\n",
-      "36/36 [==============================] - 4s 118ms/step - loss: 0.0021 - mean_absolute_error: 0.0350\n",
-      "Epoch 79/100\n",
-      "36/36 [==============================] - 4s 117ms/step - loss: 0.0022 - mean_absolute_error: 0.0357\n",
-      "Epoch 80/100\n",
-      "36/36 [==============================] - 4s 106ms/step - loss: 0.0021 - mean_absolute_error: 0.0346\n",
-      "Epoch 81/100\n",
-      "36/36 [==============================] - 4s 113ms/step - loss: 0.0021 - mean_absolute_error: 0.0348\n",
-      "Epoch 82/100\n",
-      "36/36 [==============================] - 4s 106ms/step - loss: 0.0022 - mean_absolute_error: 0.0357\n",
-      "Epoch 83/100\n",
-      "36/36 [==============================] - 4s 114ms/step - loss: 0.0021 - mean_absolute_error: 0.0346\n",
-      "Epoch 84/100\n",
-      "36/36 [==============================] - 4s 109ms/step - loss: 0.0021 - mean_absolute_error: 0.0341\n",
-      "Epoch 85/100\n",
-      "36/36 [==============================] - 4s 112ms/step - loss: 0.0021 - mean_absolute_error: 0.0349\n",
-      "Epoch 86/100\n",
-      "36/36 [==============================] - 4s 112ms/step - loss: 0.0019 - mean_absolute_error: 0.0336\n",
-      "Epoch 87/100\n",
-      "36/36 [==============================] - 4s 108ms/step - loss: 0.0020 - mean_absolute_error: 0.0342\n",
-      "Epoch 88/100\n",
-      "36/36 [==============================] - 4s 111ms/step - loss: 0.0021 - mean_absolute_error: 0.0346\n",
-      "Epoch 89/100\n",
-      "36/36 [==============================] - 4s 106ms/step - loss: 0.0020 - mean_absolute_error: 0.0339\n",
-      "Epoch 90/100\n",
-      "36/36 [==============================] - 4s 110ms/step - loss: 0.0020 - mean_absolute_error: 0.0342\n",
-      "Epoch 91/100\n",
-      "36/36 [==============================] - 4s 112ms/step - loss: 0.0021 - mean_absolute_error: 0.0344\n",
-      "Epoch 92/100\n",
-      "36/36 [==============================] - 4s 123ms/step - loss: 0.0020 - mean_absolute_error: 0.0341\n",
-      "Epoch 93/100\n",
-      "36/36 [==============================] - 5s 128ms/step - loss: 0.0019 - mean_absolute_error: 0.0327\n",
-      "Epoch 94/100\n",
-      "36/36 [==============================] - 5s 128ms/step - loss: 0.0021 - mean_absolute_error: 0.0342\n",
-      "Epoch 95/100\n",
-      "36/36 [==============================] - 4s 121ms/step - loss: 0.0020 - mean_absolute_error: 0.0341\n",
-      "Epoch 96/100\n",
-      "36/36 [==============================] - 4s 124ms/step - loss: 0.0019 - mean_absolute_error: 0.0328\n",
-      "Epoch 97/100\n",
-      "36/36 [==============================] - 5s 126ms/step - loss: 0.0020 - mean_absolute_error: 0.0331\n",
-      "Epoch 98/100\n",
-      "36/36 [==============================] - 4s 118ms/step - loss: 0.0020 - mean_absolute_error: 0.0337\n",
-      "Epoch 99/100\n",
-      "36/36 [==============================] - 4s 121ms/step - loss: 0.0021 - mean_absolute_error: 0.0340\n",
-      "Epoch 100/100\n",
-      "36/36 [==============================] - 4s 118ms/step - loss: 0.0020 - mean_absolute_error: 0.0328\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.src.callbacks.History at 0x7f4ffb03d1d0>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "regressor.fit(previsores, preco_real, epochs=100, batch_size=32)"
    ]
