course/guia-completo-gans-redes-adversarias-generativas

--- a/udemy/a_z/gato_cachorro/mnist.ipynb
+++ b/udemy/a_z/gato_cachorro/mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,12 +66,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classificador.fit_generator(base_treinamento, steps_per_epoch=4000/32, epochs=5, validation_data=base_teste, validation_steps=1000/32)"
+    "classificador.fit_generator(base_treinamento, steps_per_epoch=4000/32, epochs=30, validation_data=base_teste, validation_steps=1000/32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "previsao = classificador.predict(imagem_teste)\n",
-    "previsao = (previsao > 0.5)"
+    "previsao"
    ]
   },
   {
